# GStreamerFrameGrabber

./: Barcode.c  Barcode.h  BarcodeResults.txt  BarcodeResults.txt~  BarcodeResultsAngled.txt  CMakeLists.txt  crdDefs.h  main.c
